unpackaged/main/default/objects/Child_Form__c/Child_Form__c.object-meta.xml
<CustomObject>
    <label>Child Form</label>
    <nameField>
        <displayFormat>OFF-{0000}</displayFormat>
        <label>Child Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Child Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>