unpackaged/main/default/objects/Child_Form__c/fields/Form_Parent__c.field-meta.xml
<CustomField>
        <fullName>Form_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Form Parent</label>
        <referenceTo>Form_Parent__c</referenceTo>
        <relationshipLabel>Child Forms</relationshipLabel>
        <relationshipName>Child_Forms</relationshipName>
        <type>Lookup</type>
    </CustomField>