unpackaged/main/default/objects/Child_Form__c/fields/Object_Name__c.field-meta.xml
<CustomField>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>20</length>
        <type>Text</type>
    </CustomField>