unpackaged/main/default/objects/Child_Form__c/fields/Sub_Type__c.field-meta.xml
<CustomField>
        <fullName>Sub_Type__c</fullName>
        <label>Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Check box</fullName>
                </value>
                <value>
                    <fullName>Radio button</fullName>
                </value>
                <value>
                    <fullName>Drop down</fullName>
                </value>
                <value>
                    <fullName>First Name</fullName>
                </value>
                <value>
                    <fullName>Last Name</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>