unpackaged/main/default/objects/Child_Form__c/fields/Values__c.field-meta.xml
<CustomField>
        <fullName>Values__c</fullName>
        <description>Auto populated values
Drop down values</description>
        <label>Values</label>
        <type>TextArea</type>
    </CustomField>