unpackaged/main/default/objects/Child_Form__c/listViews/All.listView-meta.xml
<ListView>
        <fullName>All</fullName>
        <columns>Label__c</columns>
        <columns>Field_Name__c</columns>
        <columns>NAME</columns>
        <columns>Form_Parent__c</columns>
        <columns>Is_Required__c</columns>
        <columns>Object_Name__c</columns>
        <columns>Sub_Type__c</columns>
        <columns>Type__c</columns>
        <columns>Values__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </ListView>